--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = python-template
+name = pythontemplate
 version = 0.0.1
 author = Kieren Funk
 author_email = kierenfunk@gmail.com
