--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           command: "pipenv run lint"
       - run:
           name: "Test"
-          command: "pytest"
+          command: "pipenv run pytest"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
