--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [scripts]
-lint = "bash -c 'echo autopep8 && autopep8 src -riv --max-line-length=79 && echo flake8 && flake8 && echo pylint && pylint src'"
+lint = "bash -c 'echo autopep8 && autopep8 src -riv --max-line-length=79 && echo flake8 && flake8 && echo pylint && pylint src && mypy src'"
 
 [packages]
 
@@ -14,6 +14,7 @@ autopep8 = "*"
 pylint = "*"
 pytest = "*"
 pytest-cov = "*"
+mypy = "*"
 
 [requires]
 python_version = "3"
