--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [scripts]
-lint = "bash -c 'autopep8 src tests -riv --max-line-length=119 && flake8 src tests --ignore=E501,W503 && pylint src tests --disable=C0301 && mypy src tests'"
+lint = "bash -c 'autopep8 python_template tests -riv --max-line-length=119 && flake8 python_template tests --ignore=E501,W503 && pylint python_template tests --disable=C0301 && mypy python_template tests'"
 
 [packages]
 
