--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pythontemplate
+name = python-template
 version = 0.0.1
 author = Kieren Funk
 author_email = kierenfunk@gmail.com
@@ -16,9 +16,9 @@ classifiers =
 
 [options]
 package_dir =
-    = src
+    = python_template
 packages = find:
 python_requires = >=3.6
 
 [options.packages.find]
-where = src
+where = python_template
